Working on AddNews

--- a/WallProject/Areas/Users/Views/Goods/Create.cshtml
+++ b/WallProject/Areas/Users/Views/Goods/Create.cshtml
@@ -7,13 +7,7 @@
 }
 
 
-<br/>
-
-<div class="col-md-2"></div>
-<div class="col-md-8">
-    <h2 class="text-center">
-        ثبت نذر جدید
-    </h2>
+    <h2> ثبت نذر جدید </h2>
     <br/>
     @using (Html.BeginForm())
     {
@@ -90,8 +84,7 @@
     <div>
         @Html.ActionLink("بازگشت به لیست ", "Index")
     </div>
-</div>
-<div class="col-md-2"></div>
+
 <script>
     $(function() {
         $("input[type=text],input[type=submit]").addClass("form-control");
