--- a/WallProject/Views/Shared/_MyLayout.cshtml
+++ b/WallProject/Views/Shared/_MyLayout.cshtml
@@ -91,7 +91,7 @@
             </nav>
         </div>
     </div>
-<div>
+<div class="container">
     @RenderBody()
 </div>
     @*@Scripts.Render("~/bundles/bootstrap")*@
